--- a/env.yml
+++ b/env.yml
@@ -12,6 +12,7 @@ dependencies:
   - pytorch
   - torchvision
   - torchaudio
+  - torchmetrics
   - pytorch-cuda=11.8
   - albumentations
   - pillow
